--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.14",
+    "graphql": "^16.6.0",
     "bootstrap": "^5.2.3",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "react-scripts": "3.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
