--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^4.0.1",
+    "@apollo/client": "^3.8.7",
+    "@apollo/server": "^4.7.1",
+    "apollo-server-express": "^3.9.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "graphql": "^16.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^7.0.2"
   },
