--- a/package.json
+++ b/package.json
@@ -14,12 +14,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^5.1.0"
+    "concurrently": "^8.2.0"
   },
   "dependencies": {
-    "apollo-link": "^1.2.14",
-    "apollo-link-error": "^1.1.13",
-    "apollo-server": "^3.13.0",
-    "react-switch": "^7.0.0"
+    "@apollo/client": "^3.8.8"
   }
 }
