--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-    "install": "cd server && npm i && cd ../client && npm i",
+    "install": "cd server && npm i && cd ../client && npm i --production=false",
     "build": "cd client && npm run build",
     "render-build": "npm install && npm run build"
   },
@@ -17,6 +17,7 @@
     "concurrently": "^8.2.0"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.8"
+    "@apollo/client": "^3.8.8",
+    "dotenv": "^16.3.1"
   }
 }
